docs: update README.md and add comprehensive AGENTS.md
- Update README.md with current project state and accurate setup instructions
- Add complete AGENTS.md file following best practices with:
  - Project overview and architecture details
  - Build and test commands with proper OpenTelemetry configuration
  - Code style guidelines for observability-first development
  - Security considerations and data privacy patterns
  - Troubleshooting guides for common issues
  - Development workflow with observability requirements

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>